Fixed Formatting - align left

--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ a, p{
   float: left;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
   justify-content: center;
   text-align: center;
 
